# fvWeb

./: .gitignore  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/app/database/: __init__.py  crud.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.tsx
frontend/src/pages/: Home.tsx
images/: COPY.md
