[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The API for fvWeb"
authors = ["HyScript7 <hyscript7@seznam.cz>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
